# mission-mcp

./: CONTRIBUTING.md  Makefile  README.md  pyproject.toml
src/mission_mcp/: __init__.py  __main__.py  cpacs_adapter.py  main.py  server.py  session_manager.py
src/mission_mcp/aviary/: __init__.py  design_space.py  runner.py
src/mission_mcp/physics/: atmosphere.py  performance.py  segments.py
src/mission_mcp/tools/: __init__.py  check_constraints.py  configure_mission.py  get_trajectory.py  run_mission.py  set_segments.py
tests/: test_atmosphere.py  test_mission_e2e.py  test_ovs_cpacs.py
