[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mission-mcp"
version = "0.2.0"
description = "An MCP for mission analysis with NASA Aviary integration"
authors = [
  { name = "The Design Research Collective", email = "ask-drc@cmu.edu" }
]
maintainers = [
  { name = "Mayank Dixit", email = "mayankd@andrew.cmu.edu" },
  { name = "Christopher McComb", email = "ccm@cmu.edu" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "anyio>=4.0.0,<5.0.0",
  "fastmcp~=2.13.1",
  "pydantic>=2.6.0,<3.0.0",
  "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/cmudrc/mission-mcp"
Repository = "https://github.com/cmudrc/mission-mcp"
Issues = "https://github.com/cmudrc/mission-mcp/issues"

[project.optional-dependencies]
aviary = [
  "aviary==0.9.10",
  "openmdao==3.36.0",
  "dymos==1.13.1",
]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "mypy>=1.11",
  "ruff>=0.6.0",
  "build>=1.2.0",
  "pre-commit>=3.8.0",
]

[project.scripts]
mission-mcp = "mission_mcp.__main__:main"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "UP047"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
strict = true
ignore_missing_imports = true
exclude = ["^build/"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["mission_mcp.aviary.*", "mission_mcp.cpacs_adapter", "mission_mcp.tools.run_mission"]
disallow_untyped_defs = false
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=mission_mcp --cov-report=term-missing"
pythonpath = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mission_mcp*"]
